# ink_cli

./: .gitignore  README.md  ink.py  pyproject.toml  requirements.txt  test_sample.txt  test_sample_v1_entropy_minimal.md  test_sample_v2_entropy_low.md  test_sample_v3_entropy_med.md
data/: high_prob_words.json  voice_templates.json
engine/: analyzer.py  burst.py  deep_analyze.py  state.py  syn_fuzz.py  voice.py
