[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "ink-fuzzer"
version = "1.0.0"
description = "Stealth Text Fuzzer: Adversarial linguistic perturbation for bypassing AI detectors."
readme = "README.md"
requires-python = ">=3.8"
authors = [
    { name = "Musa", email = "musa@example.com" }
]
keywords = ["ai", "security", "nlp", "fuzzer", "adversarial"]
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Topic :: Security",
]
dependencies = []

[project.scripts]
ink = "ink:main"

[tool.setuptools]
packages = ["engine"]
py-modules = ["ink"]

[tool.setuptools.package-data]
engine = ["../data/*.json"]
